# ambient-expense-agent

./: Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  make.bat  pyproject.toml
artifacts/grade_results/: results_20260620_012233.html  results_20260620_012233.json  results_20260620_013247.html  results_20260620_013247.json  results_20260620_013421.html  results_20260620_013421.json  results_20260620_013805.html  results_20260620_013805.json  results_20260620_014030.html  results_20260620_014030.json
artifacts/traces/: generated_traces.json
expense_agent/: agent.py  config.py  fast_api_app.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/eval/: eval_config.yaml  generate_traces.py  grade_local.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py
