[project]
name = "manager-dashboard"
version = "0.1.0"
description = "FastAPI Manager Dashboard for Ambient Expense Agent"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-adk>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.156.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
